[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/ButtonFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://TitleScreen/Beams.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
resource_local_to_scene = true
default_font = ExtResource( 1 )
Panel/colors/BackgroundColor = Color( 0, 0, 0, 1 )

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Pipes" parent="." instance=ExtResource( 3 )]
scroll_speed = 800
beams_count = 20
size_multiplier = 180

[node name="Control" type="HBoxContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 596.0
margin_right = 1323.0
margin_bottom = 1080.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 727.0
margin_bottom = 634.0

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.615686, 0.639216, 0.643137, 1 )
margin_right = 727.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 4 )
text = "TagGame"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 638.0
margin_right = 727.0
margin_bottom = 686.0

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 727.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -750, -334 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.901961, 0.858824, 0.815686, 1 )
text = "Play"

[node name="ExitButton" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 727.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
